--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -3,7 +3,7 @@ run-name: Run test suite for trac-github
 on: [pull_request]
 jobs:
   runtests-py2:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     container:
       image: python:2.7.18-buster
 
